# Azalea

./: .editorconfig  .env.dev  .gitignore  AGENTS.md  README.md  ROADMAP.md  biome.json  bun.lockb  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.agents/todos/: shortcutkey.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: release.yml
config_dev/: config.template.json  config.toml
src/: App.tsx  app.module.css  binding.ts  commands.ts  index.tsx  preload.ts  shortcuts.ts  utils.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: pitch_range.rs
src-tauri/examples/: README.md  range.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_player.rs  commands.rs  config.rs  core.rs  lib.rs  main.rs
src-tauri/src/app/: core.rs  error.rs  mod.rs  state.rs
src-tauri/src/assets/: range.json  range.toml
src-tauri/src/audio/: player.rs  spectal.rs
src-tauri/src/command/: app.rs  core.rs  mod.rs
src-tauri/src/commands/: config.rs  core.rs  mod.rs  process.rs  project.rs  utils.rs
src-tauri/src/config/: manager.rs  mod.rs  range.rs  types.rs
src-tauri/src/spectal/: mel.rs  mod.rs
src-tauri/src/voicevox_sys/: README.md  audio_query.rs  metas.rs  mod.rs  utils.rs  wrapper.rs
src-tauri/src/voicevox_sys/binding/: README.md  mod.rs  voicevox_core.rs
src-tauri/tests/: pitch_range.rs  rashoumon.txt  test_wrapper.rs
src/binding/: AccentPhrase.ts  SpeakerMeta.ts  StyleId.ts  StyleMeta.ts  StyleType.ts
src/bindings/: AudioQuery.ts  Mora.ts  SpeakerMeta.ts
src/components/: AboutDialog.tsx  AppDialogContent.tsx  AutogrowInput.tsx  BottomPanel.tsx  CharacterCard.tsx  PresetManagerDialog.tsx  ShortcutReferenceDialog.tsx  TextBlock.tsx
src/contexts/: config.ts  i18n.ts  meta.ts  spectrogram.ts  system.ts  text.ts  ui.ts
src/i18n/: en.json  index.ts  ja.json
src/layout/: BottomPanel.tsx  ConfigPage.tsx  InitDialog.tsx  InitPage.tsx  MainPage.tsx  Sidebar.tsx  sidebar.module.css
src/store/: config.ts  meta.ts  text.ts  ui.ts
src/types/: AccentPhrase.ts  AudioQuery.ts  StyleMeta.ts  StyleVersion.ts
