[package]
name = "azalea"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "azalea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.93"
derive-new = "0.7.0"
indexmap = "2.6.0"
itertools = "0.13.0"
tracing = "0.1.40"
derive_more = { version = "1.0.0", features = ["from_str"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.0"
rodio = { version = "0.20.1", default-features = false, features = [
    "wav",
    "hound",
] }
ts-rs = { version = "10.0.0", features = ["serde_json"] }
walkdir = "2.5.0"
libloading = "0.8.5"
lru = "0.12.5"
dotenvy = "0.15.7"

[profile.dev]
incremental = true

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
