[package]
name = "azalea"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "azalea_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.93"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
rodio = { version = "0.20.1", default-features = false, features = [
    "wav",
    "hound",
] }
walkdir = "2.5.0"
lru = "0.16.2"
rustfft = "6.2.0"
ndarray = { version = "0.17.1", features = ["serde", "rayon"] }
rayon = "1.10.0"
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
dirs = "6"
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "4.0.3"
tokio = { version = "1" }

[dependencies.voicevox_core]
git = "https://github.com/Patchethium/voicevox_core.git"
branch = "specta"
features = ["specta", "load-onnxruntime"]

[profile.dev]
incremental = true

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
